// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers invoiceReducer should correctly getInvoice 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": true,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly getInvoices 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": true,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly invcoiceFailed 1`] = `
Object {
  "data": null,
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly invcoiceSuccessful 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly receiveFormInvoice 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly receiveInvoice 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": "foo",
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly receiveInvoices 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [
    1,
    2,
  ],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly searchInvoices 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "foo",
}
`;

exports[`reducers invoiceReducer should correctly sendInvoice 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": true,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should correctly setInvoice 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": "foo",
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;

exports[`reducers invoiceReducer should handle initial state 1`] = `
Object {
  "data": Object {},
  "formInvoice": Object {
    "amount": "0",
    "payreq": "",
    "r_hash": "",
  },
  "invoice": null,
  "invoiceLoading": false,
  "invoices": Array [],
  "invoicesSearchText": "",
}
`;
